force-app/main/default/objects/Test_Score__c.object
<CustomObject>
    <fields>
        <fullName>Integration_Source__c</fullName>
        <description>derived</description>
        <label>Integration Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Student Records</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAT_Pre_2016_Score__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field indicates if the designated test score record reflects the
pre-2016 SAT redesigned scoring structure.</description>
        <label>SAT Pre-2016 Score</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Component_Percentile__c</fullName>
        <description>[Peoplesoft] - Percentile on test</description>
        <label>Percentile</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Test_Component_Score__c</fullName>
        <description>[Peoplesoft] - Score on the test</description>
        <label>Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Component__c</fullName>
        <description>[Peoplesoft] - Examples include: Analytical, Composite, Integrated Reasoning, Quantitative, SPEAK, TSE, Verbal, Overall, Biochemistry, Cell &amp; Molecular Biology, Biochemistry, Biology, Cell Biology, Chemistry, Cellular and Molecular, Computer Science, Literature in English, Experimental Psychology, Mathematics, Organismal Biology, Physics, Psychology, Social Psychology, Art History, Art: Studio Art - 2-D Design, Art: Studio Art - 3-D Design, Art: Studio Art - Drawing, Aural Subscore, Calculus AB, Calculus AB Subscore, Calculus BC, Chinese Language &amp; Culture, Computer Science A, Computer Science AB, Economics: Macroeconomics, Economics: Microeconomics, English, English Language &amp; Culture, English Literature &amp; Composition, Environmental Science, European History, French Language, French Literature, German Language, Government &amp; Politics: Comparitive, Government &amp; Politics: United States, Human Geography, Italian Language &amp; Culture, Japanese Language &amp; Culture, Latin: Literature, Latin: Ve</description>
        <label>Test Component</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Test_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Analytical</fullName>
                </value>
                <value>
                    <fullName>Composite</fullName>
                </value>
                <value>
                    <fullName>Integrated Reasoning</fullName>
                </value>
                <value>
                    <fullName>Quantitative</fullName>
                </value>
                <value>
                    <fullName>SPEAK</fullName>
                </value>
                <value>
                    <fullName>TSE</fullName>
                </value>
                <value>
                    <fullName>Verbal</fullName>
                </value>
                <value>
                    <fullName>Overall</fullName>
                </value>
                <value>
                    <fullName>Biochemistry, Cell &amp; Molecular Biology</fullName>
                </value>
                <value>
                    <fullName>Biochemistry</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Cell Biology</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Cellular and Molecular</fullName>
                </value>
                <value>
                    <fullName>Computer Science</fullName>
                </value>
                <value>
                    <fullName>Literature in English</fullName>
                </value>
                <value>
                    <fullName>Experimental Psychology</fullName>
                </value>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Organismal Biology</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Psychology</fullName>
                </value>
                <value>
                    <fullName>Social Psychology</fullName>
                </value>
                <value>
                    <fullName>Art History</fullName>
                </value>
                <value>
                    <fullName>Art: Studio Art - 2-D Design</fullName>
                </value>
                <value>
                    <fullName>Art: Studio Art - 3-D Design</fullName>
                </value>
                <value>
                    <fullName>Art: Studio Art - Drawing</fullName>
                </value>
                <value>
                    <fullName>Aural Subscore</fullName>
                </value>
                <value>
                    <fullName>Calculus AB</fullName>
                </value>
                <value>
                    <fullName>Calculus AB Subscore</fullName>
                </value>
                <value>
                    <fullName>Calculus BC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <description>[Peoplesoft] - Date of test</description>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Record_Number__c</fullName>
        <description>[Peoplesoft] - Record number for the test</description>
        <label>Test Record Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Source__c</fullName>
        <description>[Peoplesoft] - Examples include: Self-Reported, Official</description>
        <label>Test Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self-Reported</fullName>
                </value>
                <value>
                    <fullName>Official</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <description>[Peoplesoft] - Examples include: ACT, AP, GMAT, GRE, GRE Subject, SAT, TOEFL</description>
        <label>Test Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACT</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>GMAT</fullName>
                </value>
                <value>
                    <fullName>GRE</fullName>
                </value>
                <value>
                    <fullName>GRE Subject</fullName>
                </value>
                <value>
                    <fullName>SAT</fullName>
                </value>
                <value>
                    <fullName>TOEFL</fullName>
                </value>
                <value>
                    <fullName>SAT I</fullName>
                </value>
                <value>
                    <fullName>CLEP</fullName>
                </value>
                <value>
                    <fullName>MPT</fullName>
                </value>
                <value>
                    <fullName>AMPT</fullName>
                </value>
                <value>
                    <fullName>ALEKSMATH</fullName>
                </value>
                <value>
                    <fullName>LSAT</fullName>
                </value>
                <value>
                    <fullName>IELTS</fullName>
                </value>
                <value>
                    <fullName>GED</fullName>
                </value>
                <value>
                    <fullName>ACCUPLACER2</fullName>
                </value>
                <value>
                    <fullName>PTE</fullName>
                </value>
                <value>
                    <fullName>DSST2</fullName>
                </value>
                <value>
                    <fullName>DSST</fullName>
                </value>
                <value>
                    <fullName>MAT</fullName>
                </value>
                <value>
                    <fullName>AECP</fullName>
                </value>
                <value>
                    <fullName>HISET</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>[Peoplesoft] - Relationship to contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Test Scores</relationshipLabel>
        <relationshipName>Test_Scores_Contact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <description>Object containing scores from ACT, AP, GMAT, GRE, GRE Subject, SAT, TOEFL</description>
    <label>Test Score</label>
    <nameField>
        <label>Test Score Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All_Test_Scores</fullName>
        <columns>Contact__c</columns>
        <columns>Test_Date__c</columns>
        <columns>Test_Type__c</columns>
        <columns>Test_Source__c</columns>
        <columns>Test_Component__c</columns>
        <columns>Test_Component_Score__c</columns>
        <columns>Test_Component_Percentile__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Test Scores</label>
    </listViews>
</CustomObject>