force-app/main/default/objects/Test_Score__c/listViews/All_Test_Scores.listView-meta.xml
<ListView>
    <fullName>All_Test_Scores</fullName>
    <columns>Contact__c</columns>
    <columns>Test_Date__c</columns>
    <columns>Test_Type__c</columns>
    <columns>Test_Source__c</columns>
    <columns>Test_Component__c</columns>
    <columns>Test_Component_Score__c</columns>
    <columns>Test_Component_Percentile__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Test Scores</label>
</ListView>